tests/static/pass/sym-addrs/2-a.c
extern int x;

static int *y = &x;

int main(void) {
      return *y;
}
