tests/static/fail/internal/1.2.c
int main(void) {
      int x;
      static int x = 1;
      return x;
}
